# e201_test_platform

./: Qtdesigner.lnk  README.md  _run_Gui_fwsw_apps.bat  _run_Gui_python311.bat  pyproject.toml
examples/: e201_master_slave.py  e201_master_slave_example.py  e201b_example.py  e201p_example.py  e201q_example.py  test.py
src/e201_gui/: main.py
src/e201_gui/e201_drivers/: master.py  parser.py  registers_presets.py
src/e201_gui/gui/: acquisition_worker.py  auxiliary.py  connect_elements.py  live_plot.py  manual_motor.py  messages.py  motor_worker.py  position_buffer.py
src/e201_gui/gui/ui_template/: convert.bat  e201_ui_template.py  e201_ui_template.ui
src/e201_gui/helpers/: plot_analysis.py  register_map.py  serial_port.py
src/e201_gui/motor_drivers/: EPOS_drv.py  epos.py
src/e201_test_platform/: __init__.py  acquisition_worker.py  connect_elements.py  e201.py  gui_auxiliary.py  helpers.py  main.py  main_example.py  manual_motor.py  messages.py  motor_worker.py  register_map.py  serial_port.py
src/e201_test_platform/e201_acquisition/: dual_acquisition.py  e201.py  e201_threading_proba.py  e201b.py  e201q.py
src/e201_test_platform/e201_versions/: e201b.py  e201p.py  e201q.py  e201s.py
src/e201_test_platform/gui/: convert.bat  convert_gui.bat  ui_template.py  ui_template.ui
src/e201_test_platform/motor_drivers/: epos.py
