[project]
name = "e201-test-platform"
version = "0.1.0"
description = "Encoder testing platform with E201 devices"
readme = "README.md"
authors = [
    { name = "nejcropic", email = "nejc.ropic@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "PyQt5==5.15.9",
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
native-tls = true
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[dependency-groups]
dev = [
    "pyqt5-tools==5.15.9.3.3",
]
