[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "e201-gui"
version = "0.1.0"
description = "Testing platform to test encoders with E201 interface"
readme = "README.md"
authors = [
    { name = "ropic", email = "nejc.ropic@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pyqt5>=5.15.11",
    "pyserial>=3.5",
    "pyqtgraph",
    "matplotlib>=3.10.8",
    "letp-e2019<=1.0.0",
    "letp-parsers<=1.0.0",
]


[tool.uv]
native-tls = true
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[project.scripts]
e201 = "e201_gui.main:main"

[tool.uv.workspace]
members = [
    "packages/letp-e2019",
    "packages/letp-parsers",
]


[tool.uv.sources]
letp-e2019 = { workspace = true }
letp-parsers = { workspace = true }


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120